Fixed horizontal scrolling and added more images

--- a/style.css
+++ b/style.css
@@ -7,13 +7,6 @@
     text-decoration: none;
 }
 
-img {
-    float: left;
-    width: 100px;
-    height: 300px;
-    object-fit: cover;
-}
-
 a {
     color: inherit;
 }
@@ -68,22 +61,36 @@ h1 {
 }
 
 .img-container {
-    width: 100%;
-    height: 50vh;
-    display: flex;
-    overflow: auto;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 23%;
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
 }
 
-.img-container div {
-    width: 100%;
-    display: flex;
-    flex-wrap: nowrap;
-    flex: none;
+.inline-snaps {
+    scroll-snap-type: inline mandatory;
 }
 
-.img-container div img {
-    margin: 15px;
-    width: 100%;
+.inline-snaps > * {
+    scroll-snap-align: start;
+    scroll-padding-inline: 4%;
+}
+
+.scroll-images {
+    padding: 4%;
+    margin: 4%;
+    height: auto;
+    display: grid;
+    grid-template-rows: min-content;
+    background: #CDFAD5;
+    border-radius: 5px;
+}
+
+.scroll-images img {
+    inline-size: 100%;
+    aspect-ratio: 4/3;
+    object-fit: cover;
 }
 
 img.special-img {
